WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314734
[Flex] Flex container with aspect-ratio-derived height does not provide definite cross size to flex items
https://bugs.webkit.org/show_bug.cgi?id=314734
Summary
[Flex] Flex container with aspect-ratio-derived height does not provide defin...
alan
Reported
2026-05-13 09:01:43 PDT
ssia
Attachments
Patch
(7.87 KB, patch)
2026-05-13 09:03 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(8.11 KB, patch)
2026-05-14 05:19 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-05-13 09:03:44 PDT
Created
attachment 479653
[details]
Patch
alan
Comment 2
2026-05-14 05:19:06 PDT
Created
attachment 479662
[details]
[fast-cq]Patch
EWS
Comment 3
2026-05-14 10:32:18 PDT
Committed
313256@main
(20da9872141e): <
https://commits.webkit.org/313256@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479662
[details]
.
Radar WebKit Bug Importer
Comment 4
2026-05-14 10:33:13 PDT
<
rdar://problem/177085129
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug