Source/WebCore/rendering/RenderFlexibleBox.cpp
@@ -1436,8 +1436,19 @@ bool RenderFlexibleBox::hasDefiniteCrossSizeForFlexItem(const RenderBox& flexIte
             return true;
         if (canResolveFullyConstrainedLogicalHeight(*this))
             return true;
+        if (canResolveCrossSizeFromAspectRatioDuringLayout())
+            return true;
     }
     return false;
+}
+
+bool RenderFlexibleBox::canResolveCrossSizeFromAspectRatioDuringLayout() const
+{
+    // CSS Sizing 4 section 5.1: "When a box has a preferred aspect ratio and an automatic
+    // size in one axis, the automatic size is resolved from the definite size in the other axis."
+    // During layout the container's width is set, so aspect-ratio can resolve the height.
+    auto& crossSize = isHorizontalFlow() ? style().height() : style().width();
+    return m_inLayout && crossSize.isAuto() && style().aspectRatio().hasRatio();
 }
 
 template<typename SizeType> bool RenderFlexibleBox::flexItemCrossSizeIsDefinite(const RenderBox& flexItem, const SizeType& size)
@@ -2352,7 +2363,7 @@ LayoutUnit RenderFlexibleBox::innerCrossSizeForFlexItem(const RenderBox& flexIte
             innerCrossSize = adjustContentBoxLogicalHeightForBoxSizing(LayoutUnit { fixedSize->resolveZoom(style().usedZoomForLength()) });
         else if (size.isPercent())
             innerCrossSize = availableLogicalHeightForPercentageComputation().value_or(0_lu);
-        else if (canResolveFullyConstrainedLogicalHeight(*this))
+        else if (canResolveFullyConstrainedLogicalHeight(*this) || canResolveCrossSizeFromAspectRatioDuringLayout())
             innerCrossSize = std::max(0_lu, computeLogicalHeight(logicalHeight(), 0_lu).extent - borderAndPaddingLogicalHeight() - scrollbarLogicalHeight());
         else
             ASSERT_NOT_REACHED();
